[gd_scene load_steps=2 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1"]

[node name="Main" type="Node"]
script = ExtResource("1")

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="MainMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.02, 0.08, 1)

[node name="VBox" type="VBoxContainer" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="UI/MainMenu/VBox"]
layout_mode = 2
text = "MIDNIGHT GRIND"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="UI/MainMenu/VBox"]
layout_mode = 2
text = "Nova Pacifica awaits."
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="UI/MainMenu/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="NewGame" type="Button" parent="UI/MainMenu/VBox"]
layout_mode = 2
text = "NEW GAME"

[node name="Continue" type="Button" parent="UI/MainMenu/VBox"]
layout_mode = 2
text = "CONTINUE"

[node name="Quit" type="Button" parent="UI/MainMenu/VBox"]
layout_mode = 2
text = "QUIT"

[node name="Version" type="Label" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -30.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.1.0 â€” MVP"
horizontal_alignment = 2

[node name="FadeOverlay" type="ColorRect" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)
